# anda-brain

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  README_cn.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-dockers.yml  release.yml  test.yml
anda-brain-openclaw/: README.md  openclaw.plugin.json  package.json
anda-brain-openclaw/src/: client.ts  index.ts  types.ts
anda-cli/: README.md  go.mod  main.go
anda-cli/api/: client.go  client_test.go  types.go  types_test.go
anda-cli/cmd/: admin.go  conversations.go  execute_kip_readonly.go  formation.go  formation_batch.go  formation_test.go  get_or_init_user.go  maintenance.go  management.go  recall.go  root.go  status.go
anda-hippocampus-openclaw/: README.md  package.json
anda-hippocampus-openclaw/src/: index.ts
anda_brain/: API.md  API_cn.md  Cargo.toml  Dockerfile  README.md  SKILL.md  WEBSITE.md  WEBSITE_cn.md  app.html
anda_brain/assets/: BrainFormation.md  BrainFormationReview.md  BrainMaintenance.md  BrainRecall.md  KIPSyntax.md  RecallFunctionDefinition.json
anda_brain/evals/: counterparty_boundary.json  default_profile.json  expiring_discount.json  fact_correction.json  no_maintenance_profile.json  preference_reversal.json  project_budget.json  quick_profile.json  style_preference.json  travel_logistics.json
anda_brain/src/: agents.rs  eval.rs  handler.rs  lib.rs  mcp.rs  payload.rs  space.rs  types.rs
anda_brain/src/agents/: formation.rs  maintenance.rs  recall.rs
anda_hippocampus/: API.md  API_cn.md  Cargo.toml
anda_hippocampus/assets/: HippocampusFormation.md  HippocampusMaintenance.md  HippocampusRecall.md  KIPSyntax.md
anda_hippocampus/src/: handler.rs  space.rs  types.rs
anda_hippocampus/src/agents/: formation.rs  maintenance.rs  recall.rs
deploy/: quick_start.md  quick_start_cn.md
deploy/systemd/: anda_brain.service
posts/: AI_Memory_Must_Sleep.md  AI_Memory_Must_Sleep_cn.md  Claude_Code_Memory_Research.md  Claude_Code_Memory_Research_cn.md  Company_Built_As_Intelligence.md  Company_Built_As_Intelligence_cn.md  Enterprise_AI_Brain.md  Enterprise_AI_Brain_cn.md  LLM_Knowledge_Bases.md  LLM_Knowledge_Bases_cn.md  Tokens_Anda_Brain.md  Tokens_Anda_Brain_cn.md
skills/anda-brain/: SKILL.md
