[workspace]
resolver = "2"
members = ["anda_hippocampus"]

[workspace.package]
description = "🧠 Anda Hippocampus (海马体) — Autonomous Graph Memory for AI Agents"
repository = "https://github.com/ldclabs/anda-hippocampus"
homepage = "https://github.com/ldclabs/anda-hippocampus"
keywords = [
  "knowledge-graph",
  "persistent-memory",
  "cognitive",
  "kip",
  "agent-memory",
]
categories = [
  "accessibility",
  "web-programming",
  "development-tools",
  "text-processing",
]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = [
  "http1",
  "http2",
  "json",
  # "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
anda_core = { version = "0.12" }
anda_engine = { version = "0.12" }
anda_engine_server = { version = "0.12" }
anda_web3_client = { version = "0.12" }
anda_object_store = "0.3"
anda_db = { version = "0.7", features = ["full"] }
anda_db_tfs = { version = "0.5", features = ["full"] }
anda_cognitive_nexus = "0.7"
anda_kip = "0.7"
base64 = "0.22"
ciborium = "0.2"
coset = "0.4"
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
http = "1.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha3 = "0.11"
ic_cose_types = "0.9"
ic_cose = "0.9"
ic_auth_types = "0.8"
ic-ed25519 = "0.6"
object_store = { version = "0.13" }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
structured-logger = "1"
log = { version = "0.4", features = ["kv_serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors"] }
markdown = "1"
mimalloc = { version = "0.1", features = ["v3"] }
rand = "0.10"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
