[package]
name = "anda_brain"
publish = true
version = "0.6.7"
description.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
doctest = false

[[bin]]
name = "anda_brain"
path = "src/bin/main.rs"

[dependencies]
async-trait = { workspace = true }
anda_core = { workspace = true }
anda_engine = { workspace = true }
anda_db = { workspace = true }
anda_kip = { workspace = true }
anda_cognitive_nexus = { workspace = true }
anda_object_store = { workspace = true }
anda_db_tfs = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
ciborium = { workspace = true }
dotenv = { workspace = true }
ic_auth_types = { workspace = true }
ic_cose_types = { workspace = true }
ic_cose = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
http = { workspace = true }
object_store = { workspace = true, features = ["aws", "integration"] }
tower-http = { workspace = true }
mimalloc = { workspace = true }
markdown = { workspace = true }

[dev-dependencies]
